# quicopt-python

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: index.md
docs/api/: client.md  ir.md  mathopt.md  pulp.md  pyomo.md  wire.md
docs/stylesheets/: extra.css
src/quicopt/: __init__.py  _terms.py  client.py  ir.py  mathopt.py  pulp.py  pyomo.py  wire.py
tests/: test_client.py  test_frontend_equivalence.py  test_pyomo_guards.py  test_wire_golden.py
tests/goldens/: bounds_zero_start.hex  indexed.hex  indicator.hex  scalar_nlp.hex
