[build-system]
requires = ["setuptools>=77"]     # >=77 for the PEP 639 SPDX `license` expression
build-backend = "setuptools.build_meta"

[project]
name = "quicopt"
version = "0.1.0"
description = "Python client for the Quicopt service — author models, emit the Quicopt wire IR."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Tim Bode", email = "9047234+timbode@users.noreply.github.com"}]
keywords = ["optimization", "mathematical-programming", "modeling", "pyomo", "quicopt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []                 # the core (ir + wire) is stdlib-only, by design

[project.optional-dependencies]
pyomo   = ["pyomo>=6"]            # the Pyomo front-end importer lives in quicopt.pyomo
mathopt = ["ortools>=9"]          # the OR-Tools MathOpt front-end lives in quicopt.mathopt
test    = ["pytest"]
docs    = [                       # the API-reference site (mkdocs build / mkdocs serve)
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.24",
    "black",                      # mkdocstrings uses it to format rendered signatures
]

[project.urls]
Homepage = "https://github.com/timbode/quicopt-python"
Repository = "https://github.com/timbode/quicopt-python"
Documentation = "https://timbode.github.io/quicopt-python/"

[tool.setuptools.packages.find]
where = ["src"]
